--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,8 +1,2 @@
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433; databaseName=Ebook
-spring.datasource.username=E_book
-spring.datasource.password=ebpassword
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.minimum-idle=5
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.show-sql=true
+server.port=8080
+spring.data.mongodb.uri=mongodb://ebook:ebpassword@localhost:27017/ebook
